--- a/week_3/calculator_api/src/main/resources/application.yml
+++ b/week_3/calculator_api/src/main/resources/application.yml
@@ -1,2 +1,17 @@
-spring.autoconfigure.exclude:
-  - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3310/testDB?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jackson:
+    date-format: yyyy-MM-dd HH:mm
+    time-zone: Asia/Seoul
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
